# epymodelingsuite-cloud

./: .env  .env.example  .env.local.example  .gcloudignore  .gitignore  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  test.yml
docker/: Dockerfile  container-structure-test.yaml  pyproject.toml  requirements.txt
docker/scripts/: github_utils.sh  main_builder.py  main_output.py  main_runner.py  run_builder.sh  run_dispatcher.sh  run_output.sh  run_runner.sh
docs/: build-status-implementation-plan.md  command-reference.md  command-testing-plan.md  configuration-guide.md  design-and-architecture.md  epycloud.md  google-cloud-guide.md  helper-functions-reorganization-plan.md  implementation-decisions.md  index.md  operations.md  run-command-refactoring-plan.md  senior-review-2025-11-07.md  variable-configuration.md
docs/architecture/: cloud-infrastructure.md  docker-images.md  ecosystem-components.md  execution-modes.md  index.md  pipeline-stages.md  storage-abstraction.md  workflows-orchestration.md
docs/epycloud/: build.md  config.md  download.md  experiment.md  index.md  logs.md  profile.md  run.md  status.md  terraform.md  validate.md  workflow.md
docs/getting-started/: installation.md  local.md
docs/includes/: abbreviations.md
docs/javascripts/: llm-actions.js
docs/overview/: concepts.md  ecosystem.md  epycloud.md  introduction.md
docs/reference/: configuration-variables.md
hooks/: link_card.py  llms_txt.py
jobs/: README.md  generate-jobs.sh  stage-a.json.template  stage-b.json.template
layouts/: custom.yml  generate_spaghetti.py
overrides/partials/: actions.html
overrides/stylesheets/: extra.css
scripts/: main_builder.py  main_dispatcher.py  main_output.py  main_runner.py  run-output-cloud.sh  run-task-cloud.sh  run_builder.sh  run_dispatcher.sh  run_output.sh
scripts/util/: config.py  error_handling.py  logger.py  storage.py
src/epycloud/: __init__.py  __main__.py  cli.py  exceptions.py
terraform/: README.md  main.tf  monitoring.tf  network.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf  workflow.yaml
tests/: __init__.py  conftest.py  test_config.py  test_logger.py  test_storage.py
tests/integration/: test_batch_config.py  test_build_command.py  test_config_command.py  test_download_command.py  test_experiment_command.py  test_formatters.py  test_logs_command.py  test_profile_command.py  test_run_cloud_job.py  test_run_command.py  test_status_command.py  test_terraform_command.py  test_validate_command.py  test_validation.py  test_workflow_command.py
tests/unit/: test_confirmation.py  test_paths.py  (+2 more)
(+101 files in other folders)
