[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epycloud"
version = "0.4.2"
description = "CLI for epymodelingsuite cloud pipeline management"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "MOBS Lab", email = "contact@mobs-lab.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "google-cloud-storage>=2.18.2",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "epydemix>=1.0.1",
    "dill>=0.4.0",
    "python-json-logger>=2.0.7",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "epymodelingsuite",
    "cairosvg>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "epymodelingsuite @ git+https://github.com/mobs-lab/epymodelingsuite.git@dev",
]

[project.scripts]
epycloud = "epycloud.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.uv.sources]
epymodelingsuite = { git = "https://github.com/mobs-lab/epymodelingsuite.git", rev = "dev" }

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.14.4",
]
docs = [
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-material>=9.7.1",
    "mkdocs-minify-plugin>=0.8.0",
]
